<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kids World</string>
    <string name="action_settings">Settings</string>
    <string name="button_mode_debit">DEBIT</string>
    <string name="button_mode_read">READ</string>
    <string name="testing_number_default">0</string>
    <string name="tvw_balance">Balance</string>
    <string name="tvw_name">Name</string>
    <string name="tvw_check_in">Check In</string>
    <string name="tvw_check_out">Check Out</string>
    <string name="tvw_last_purchase">Last purchase</string>
    <string name="tvw_mode">Mode</string>
    <string name="title_activity_nfc">NFC Read / Debit</string>
    <string name="title_activity_gate">Entry gate</string>
    <string name="title_activity_list_host">Test list fragment</string>
    <string name="price_hint">price</string>
    <string name="product_hint">product</string>
    <string name="button_add">Add</string>

</resources>
