<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- QR scan product toolbar -->
    <Button
        android:id="@+id/btn_qr_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:onClick="onClick"
        android:text="QR" />

    <EditText
        android:id="@+id/et_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/btn_qr_scan"
        android:freezesText="true"
        android:hint="@string/price_hint"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/et_product_price"
        android:freezesText="true"
        android:hint="@string/product_hint"
        android:textSize="24sp">

        <requestFocus />
    </EditText>

    <View
        android:id="@+id/filler"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/et_product_name"
        android:background="@android:color/holo_blue_dark" />

    <TableLayout
        android:id="@+id/card_data_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/filler">

    <TableRow android:layout_weight="0.5">

            <TextView
                style="@style/debit_form"
                android:layout_weight="0.5"
                android:text="@string/tvw_mode" />

            <ToggleButton
                android:id="@+id/button_mode"
                style="@style/debit_form"
                android:layout_weight="1"
                android:textOff="@string/button_mode_read"
                android:textOn="@string/button_mode_debit" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                style="@style/debit_form"
                android:layout_weight="0.5"
                android:text="ID" />

            <TextView
                android:id="@+id/client_id"
                style="@style/debit_form"
                android:layout_weight="1"
                android:freezesText="true" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                style="@style/debit_form"
                android:layout_weight="0.5"
                android:text="@string/tvw_name" />

            <TextView
                android:id="@+id/client_name"
                style="@style/debit_form"
                android:layout_weight="1"
                android:freezesText="true" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                style="@style/debit_form"
                android:layout_weight="0.5"
                android:text="@string/tvw_balance" />

            <TextView
                android:id="@+id/balance"
                style="@style/debit_form"
                android:layout_weight="1"
                android:freezesText="true" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                style="@style/debit_form"
                android:layout_weight="0.5"
                android:text="@string/tvw_last_purchase" />

            <TextView
                android:id="@+id/last_purchase"
                style="@style/debit_form"
                android:layout_weight="1"
                android:freezesText="true" />

        </TableRow>

    </TableLayout>

    <!--
    * The basic ListFragment instance crashes this SimpleDebitActivity but runs fine in ListHostActivity.
    * Disabled for now.
    <fragment
        android:id="@+id/history_fragment"
        android:name="com.dip.kidsworld.SimpleDebitActivity.HistoryFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/card_data_table"
        tools:layout="@layout/card_transaction_view" />
    -->

</RelativeLayout>