<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow android:layout_weight="0.5">

            <TextView
                android:id="@+id/et_product_name"
                style="@style/EntryForm"
                android:layout_weight="1"
                android:freezesText="true"
                android:hint="name" />

            <TextView
                android:id="@+id/et_product_price"
                style="@style/EntryForm"
                android:layout_weight="0.5"
                android:freezesText="true"
                android:hint="price" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onClick"
                android:text="QR" />
        </TableRow>

        <TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1"
                android:background="@android:color/black" />
        </TableRow>

        <TableRow android:layout_weight="0.5">

            <TextView
                style="@style/EntryForm"
                android:layout_weight="0.5"
                android:text="@string/tvw_mode" />

            <ToggleButton
                android:id="@+id/button_mode"
                style="@style/EntryForm"
                android:layout_weight="1"
                android:textOff="@string/button_mode_read"
                android:textOn="@string/button_mode_debit" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                style="@style/EntryForm"
                android:layout_weight="0.5"
                android:text="ID" />

            <TextView
                android:id="@+id/client_id"
                style="@style/EntryForm"
                android:layout_weight="1"
                android:freezesText="true" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                style="@style/EntryForm"
                android:layout_weight="0.5"
                android:text="@string/tvw_name" />

            <TextView
                android:id="@+id/client_name"
                style="@style/EntryForm"
                android:layout_weight="1"
                android:freezesText="true" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                style="@style/EntryForm"
                android:layout_weight="0.5"
                android:text="@string/tvw_balance" />

            <TextView
                android:id="@+id/balance"
                style="@style/EntryForm"
                android:layout_weight="1"
                android:freezesText="true" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                style="@style/EntryForm"
                android:layout_weight="0.5"
                android:text="@string/tvw_last_purchase" />

            <TextView
                android:id="@+id/last_purchase"
                style="@style/EntryForm"
                android:layout_weight="1"
                android:freezesText="true" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                style="@style/EntryForm"
                android:layout_weight="0.5"
                android:text="@string/tvw_check_in" />

            <TextView
                android:id="@+id/check_in"
                style="@style/EntryForm"
                android:layout_weight="1"
                android:freezesText="true" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                style="@style/EntryForm"
                android:layout_weight="0.5"
                android:text="@string/tvw_check_out" />

            <TextView
                android:id="@+id/check_out"
                style="@style/EntryForm"
                android:layout_weight="1"
                android:freezesText="true" />

        </TableRow>
    </TableLayout>

</TableLayout>