<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dip.kidsworld.ListHostActivity">

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="onClick"
        android:text="@string/button_add"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/button_add"
        android:ems="4"
        android:hint="@string/price_hint"
        android:inputType="number"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/et_price"
        android:hint="@string/product_hint"
        android:textSize="30sp">

        <requestFocus />
    </EditText>

    <View
        android:id="@+id/filler"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/et_product"
        android:background="@android:color/holo_orange_light" />

    <fragment
        android:id="@+id/history_fragment"
        android:name="com.dip.kidsworld.SimpleDebitActivity$HistoryFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/filler"
        android:tag="history_fragment" />
</RelativeLayout>
